<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- This is the app's name, translators please do not translate and put in the same text as English version. Developers can consider putting in their own translation, this string must be changed before publishing -->
    <string name="app_name">Stickers WhatsApp</string>
    <!-- Content description for the sticker pack tray image -->
    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <!-- the title of info button in the menu that takes the user to more information about that pack showing publisher website and so on -->
    <string name="more_info_button">More info about sticker pack</string>
    <!-- Text to be shown on the button that user can click to add the sticker pack to WhatsApp -->
    <string name="add_to_whatsapp">Add</string>
    <!-- Content Description for the plus button shown on sticker pack list, that allows user to add sticker pack to WhatsApp -->
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <!-- Title of the sticker pack list activity page in case the app contains multiple sticker packs, the singular string will be used when there is only one pack in the app -->
    <plurals name="title_activity_sticker_packs_list">
        <item quantity="one">@string/app_name</item>
        <item quantity="other">@string/app_name</item>
    </plurals>
    <!-- Title of the sticker pack page when there are multiple sticker packs in the app -->
    <string name="title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <string name="title_activity_sticker_pack_details_single_pack">Sticker Pack</string>
    <!-- Title of the sticker pack info page which displays the webpage, email and privacy policy of the sticker pack -->
    <string name="title_activity_sticker_pack_info">Information</string>
    <!-- Text of button that allows user to click to go to the webpage of the publisher -->
    <string name="view_webpage">View webpage</string>
    <!-- Text of button that allows user to click to send an email -->
    <string name="send_email">Send email</string>
    <!-- Text of button that allows user to click to go to the privacy policy website -->
    <string name="privacy_policy">Privacy policy</string>
    <!-- Text of button that allows user to click to go to the license agreement website -->
    <string name="license_agreement">License agreement</string>
    <!-- Text next to the tray icon that indicates the tray icon -->
    <string name="info_screen_tray_icon">Tray icon</string>
    <!-- Text shown to the user instead of Add to WhatsApp button if the pack is already added to WhatsApp -->
    <string name="details_pack_already_added">Sticker pack added to WhatsApp</string>
    <!-- Title in the intent chooser that shows when user has multiple email client installed -->
    <string name="info_send_email_to_prompt">Send email with</string>
    <!-- Message to show in a dialog when user fails to add sticker pack -->
    <string name="add_pack_fail_prompt_update_whatsapp">Sticker pack not added. If you\'d like to add it, make sure you update to the latest version of WhatsApp.</string>
    <!-- Text in dialog button when a user has an old version of WhatsApp that prevents them from adding the sticker pack, clicking on it will take user to play store -->
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <!-- Toast text when we could not take user to play store because they don't have Google Play app installed -->
    <string name="cannot_find_play_store">Google Play is not installed on the device.</string>
    <string name="about">About</string>
    <string name="share_text">Want this amazing stickers to your WhatsApp messages? \nDownload now this application &amp; share to your friends : https://bit.ly/2OnaA6R</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">Stickers LINE for WhatsApp</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_whats_new">Changelog</string>
    <string name="about_app">About application</string>
    <string name="about_dev">About developer</string>
    <string name="dev">© 2019 Rylabs Inc.</string>
    <string name="version">Version</string>
    <string name="version_name">2.0.0</string>
    <string name="share">Share this app</string>
    <string name="share_desc">Tap to share</string>
    <string name="update">Update</string>
    <string name="update_desc">Tap to update</string>
    <string name="med_tel">Telegram</string>
    <string name="telegram">Tap to start chat</string>
    <string name="contact_us">Contact us</string>
    <string name="contact_us_desc">Tap to contact us</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_error">This required field!</string>
    <string name="feedback_toast">Has been sent!</string>
    <string name="feedback_hint">Your feedback help us to improve. We will contact you on the email you enter here, if it require any further actions.</string>
    <string name="feedback_name">Name</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_msg">Suggestions or feedback</string>
    <string name="feedback_submit">Submit</string>
    <string name="changelog_full_title">Changelog</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More…</string>

    <string name="changelog_version_format">Version <xliff:g id="version_name">%s</xliff:g></string>
</resources>
